--- a/src/styles/backgroundAnimations.css
+++ b/src/styles/backgroundAnimations.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: 1;
+  z-index: 25;
 }
 
 /* Floating Stars Animation */
